@@ -56,6 +56,6 @@
     }
 
     &:focus-visible {
-        box-shadow: 0 0 2px 2px var(--micromag-focus-color, #fff);
+        box-shadow: 0 0 2px 0 var(--micromag-focus-color, #fff);
     }
 }
