@@ -28,7 +28,7 @@
     }
 
     &:focus-visible {
-        box-shadow: 0 0 2px 2px var(--micromag-focus-color, #fff);
+        box-shadow: 0 0 0 2px var(--micromag-focus-color, #fff);
     }
 
     &:active {
