@@ -2,6 +2,16 @@
 
 This is rather free-form for now, but eventually this will be properly timestamped, and will mention the version the changes apply to!
 
+2024-03-21 Joseph Blais <joseph@folkloreinc.ca>
+
+    * Improved accessibility in Viewer
+        - Visible focus state on buttons with keyboard navigation only (:focus-within)
+        - Added skip link to controls — first focusable element
+        - Focus-locks on menus (share & screens)
+        - Descriptive aria tags for interactive elements (buttons, toggles, seek bar)
+        - Politely announced screen state changes for screen readers
+
+
 2022-09-20 Fred Mercy <fred@folkloreinc.ca>
 
     * Fixed an issue with the Horoscope screen signs not being editable
